# whisker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Package.swift  README.md  deny.toml  index.md  release-plz.toml
.cargo/: config.toml
crates/flint/: Cargo.toml
crates/flint-cli/: Cargo.toml
crates/flint-cli/src/: lib.rs
crates/flint-dev-runtime/: Cargo.toml
crates/flint-dev-runtime/src/: lib.rs
crates/flint-ffi-lynx/: Cargo.toml  build.rs
crates/flint-ffi-lynx/src/: lib.rs
crates/flint-runtime/: Cargo.toml
crates/flint-runtime/src/: lib.rs
crates/flint/src/: lib.rs
crates/lyra/: Cargo.toml
crates/lyra-build/: Cargo.toml
crates/lyra-build/src/: android.rs  ios.rs  lib.rs  paths.rs
crates/lyra-cli/: Cargo.toml
crates/lyra-cli/src/: lib.rs
crates/lyra-macros/: Cargo.toml
crates/lyra-macros/src/: lib.rs  rsx.rs
crates/lyra-mobile/: Cargo.toml
crates/lyra-mobile/include/: lyra_mobile.h  module.modulemap
crates/lyra-mobile/src/: app_logic.rs  bootstrap.rs  bridge_ffi.rs  bridge_renderer.rs  entry.rs  lib.rs
crates/lyra-runtime/: Cargo.toml
crates/lyra-runtime/src/: build.rs  diff.rs  element.rs  lib.rs  render.rs  renderer.rs  runtime.rs  signal.rs
crates/lyra/src/: lib.rs
crates/lyra/tests/: rsx_expansion.rs
crates/tuft/: Cargo.toml
crates/tuft-build/: Cargo.toml
crates/tuft-build/src/: android.rs  ios.rs  lib.rs  paths.rs
crates/tuft-cli/: Cargo.toml
crates/tuft-cli/src/: doctor.rs  lib.rs  linker_shim.rs  run.rs  rustc_shim.rs
crates/tuft-codegen/: Cargo.toml
crates/tuft-codegen/src/: lib.rs
crates/tuft-dev-server/: Cargo.toml
crates/tuft-dev-server/src/: builder.rs  installer.rs  lib.rs  server.rs  watcher.rs
crates/tuft-dev-server/src/hotpatch/: android_ndk.rs  cache.rs  jump_table.rs  link_plan.rs  mod.rs  patcher.rs  runner.rs  shim_paths.rs  symbol_table.rs  thin_build.rs  validate.rs  wrapper.rs
crates/tuft-dev-server/tests/: patcher.rs  thin_rebuild.rs  thin_rebuild_obj.rs
crates/tuft-dev-server/tests/fixtures/thin-build-fixture/: Cargo.toml
crates/tuft-dev-server/tests/fixtures/thin-build-fixture/src/: lib.rs
crates/tuft-driver/: Cargo.toml
crates/tuft-driver-sys/: Cargo.toml  build.rs
crates/tuft-driver-sys/bridge/include/: tuft_bridge.h
crates/tuft-driver-sys/bridge/src/: tuft_bridge_android.cc  tuft_bridge_internal.h  tuft_bridge_ios.mm
crates/tuft-driver-sys/src/: lib.rs
crates/tuft-driver/include/: module.modulemap  tuft.h
crates/tuft-driver/src/: lib.rs
crates/tuft-driver/src/lynx/: bootstrap.rs  mod.rs  renderer.rs
crates/tuft-macros/: Cargo.toml
crates/tuft-macros/src/: lib.rs  rsx.rs
crates/tuft-mobile/: Cargo.toml
crates/tuft-mobile/include/: module.modulemap  tuft_mobile.h
crates/tuft-mobile/src/: bootstrap.rs  bridge_ffi.rs  bridge_renderer.rs  lib.rs
crates/tuft-runtime/: Cargo.toml
crates/tuft-runtime/src/: build.rs  element.rs  lib.rs  patch.rs  renderer.rs  signal.rs
crates/tuft/src/: lib.rs
crates/tuft/tests/: rsx_expansion.rs
crates/whisker-animation/: CHANGELOG.md  Cargo.toml
crates/whisker-animation/src/: animatable.rs  config.rs  controller.rs  curve.rs  lib.rs  tests.rs  tween.rs
crates/whisker-app-config/: Cargo.toml
crates/whisker-app-config/src/: lib.rs
crates/whisker-asset/: Cargo.toml  build.gradle.kts
crates/whisker-asset/android/src/main/kotlin/rs/whisker/modules/asset/: AssetModule.kt
crates/whisker-asset/assets/fixtures/: sample.txt
crates/whisker-asset/ios/Sources/WhiskerAsset/: AssetModule.swift
crates/whisker-asset/src/: lib.rs  plugin.rs
crates/whisker-asset/tests/: macros.rs  plugin_e2e.rs
crates/whisker-build/: CHANGELOG.md  Cargo.toml
crates/whisker-build/src/: android.rs  capture.rs  child_guard.rs  ios.rs  lib.rs  lynx.rs  main.rs  modules.rs  ui.rs
crates/whisker-build/tests/: spm_pin_consistency.rs
crates/whisker-cli/: CHANGELOG.md  Cargo.toml
crates/whisker-cli/src/: build.rs  build_android.rs  build_dispatch.rs  build_ios.rs  doctor.rs  fmt.rs  lib.rs  linker_shim.rs  manifest.rs  native.rs  new_app.rs  new_module.rs  platforms.rs  probe.rs  run.rs  rustc_shim.rs  tui.rs
crates/whisker-cli/src/credential/: android.rs  asc.rs  ios.rs  mod.rs  prompt.rs
crates/whisker-cng/: CHANGELOG.md  Cargo.toml
crates/whisker-cng-protocol/: Cargo.toml
crates/whisker-cng-protocol/src/: lib.rs
crates/whisker-cng/src/: android.rs  compose.rs  discovery.rs  fingerprint.rs  ios.rs  lib.rs  render.rs
crates/whisker-cng/src/plugins/: android_application_attributes.rs  android_extra_files.rs  android_gradle_dependencies.rs  android_gradle_plugins.rs  android_meta_data.rs  android_permissions.rs  app_icon.rs  info_plist_extra.rs  ios_extra_files.rs  ios_pbxproj_ops.rs  mod.rs
crates/whisker-cng/src/templates/android/: settings.gradle.kts
crates/whisker-cng/src/templates/android/app/: build.gradle.kts
crates/whisker-cng/src/templates/android/app/src/main/: AndroidManifest.xml
crates/whisker-cng/src/templates/android/app/src/main/kotlin/: Application.kt  MainActivity.kt
crates/whisker-cng/src/templates/ios/: Info.plist  project.yml
crates/whisker-cng/src/templates/ios/Project.xcodeproj/: project.pbxproj
crates/whisker-cng/src/templates/ios/Project.xcodeproj/xcshareddata/xcschemes/: scheme.xcscheme
crates/whisker-cng/src/templates/ios/Sources/: AppDelegate.swift
crates/whisker-cng/tests/: app_icon_e2e.rs  builtins_e2e.rs  core_field_override.rs  discovery.rs  extra_files_e2e.rs  gradle_e2e.rs  pbxproj_ops_e2e.rs  subprocess.rs
crates/whisker-cng/tests/fixtures/: echo_plugin.rs
docs/: README.md  animation-design.md  architecture.md  comment-style.md  hot-reload-internals.md  hot-reload-plan.md  ios-spm-distribution.md  list-design.md  lynx-fork-setup.md  lynx-integration.md  module-api-design.md  module-author-guide.md  phase-7-design.md  (+9 more)
xtask/: Cargo.toml
xtask/src/: main.rs  paths.rs
xtask/src/android/: build_example.rs  build_lynx_aar.rs  cargo_build.rs  mod.rs  ndk.rs  unpack_lynx.rs
xtask/src/ios/: build_lynx_frameworks.rs  build_xcframework.rs  mod.rs
(+1558 files in other folders)
