[workspace]
resolver = "2"
members = [
    "crates/whisker",
    "crates/whisker-app-config",
    "crates/whisker-cli",
    "crates/whisker-cng",
    "crates/whisker-dev-runtime",
    "crates/whisker-dev-server",
    "crates/whisker-driver",
    "crates/whisker-driver-sys",
    "crates/whisker-macros",
    "crates/whisker-runtime",
    "crates/whisker-subsecond",
    "examples/hello-world",
    "examples/subsecond-poc",
    "xtask",
]
exclude = [
    # Throwaway cdylib the dev-server's `thin_rebuild` integration
    # test compiles standalone. Must NOT be a workspace member or
    # cargo would try to build it as part of the regular workspace
    # build (and we'd lose the "fresh-from-scratch crate" property
    # the test relies on).
    "crates/whisker-dev-server/tests/fixtures/thin-build-fixture",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/whiskerrs/whisker"
authors = ["itome <dev@itome.team>"]

[workspace.dependencies]
whisker = { path = "crates/whisker", version = "0.1.0" }
whisker-app-config = { path = "crates/whisker-app-config", version = "0.1.0" }
whisker-cng = { path = "crates/whisker-cng", version = "0.1.0" }
whisker-dev-runtime = { path = "crates/whisker-dev-runtime", version = "0.1.0" }
whisker-dev-server = { path = "crates/whisker-dev-server", version = "0.1.0" }
whisker-driver = { path = "crates/whisker-driver", version = "0.1.0" }
whisker-driver-sys = { path = "crates/whisker-driver-sys", version = "0.1.0" }
whisker-macros = { path = "crates/whisker-macros", version = "0.1.0" }
whisker-runtime = { path = "crates/whisker-runtime", version = "0.1.0" }

anyhow = "1"
thiserror = "2"

# Whisker-owned fork of DioxusLabs/dioxus's `subsecond` 0.7.9. The
# crate is `whisker-subsecond` but exposes itself as `subsecond` via
# `[lib] name = "subsecond"`, so consumers keep `use subsecond::*`.
# The fork anchors the ASLR-slide lookup on `whisker_aslr_anchor`
# (emitted by `#[whisker::main]`) rather than `main` — the upstream
# `dlsym(RTLD_DEFAULT, "main")` is unsafe in Whisker's dylib-based
# Android runtime, where multiple `main` symbols can coexist in the
# same linker namespace.
subsecond = { path = "crates/whisker-subsecond", version = "0.7.9", package = "whisker-subsecond" }
subsecond-types = "0.7"

# Dev-time WebSocket receiver — pulled in only via the `hot-reload`
# feature, never present in release builds. Async stack kept minimal:
# current-thread tokio + tungstenite over std TcpStream.
tokio = { version = "1", default-features = false }
tokio-tungstenite = { version = "0.21", default-features = false }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Embed the patch dylib bytes in the JSON envelope (text frame).
base64 = "0.22"

# Host-side dev server (whisker-dev-server). Heavy deps confined here.
axum = { version = "0.8", default-features = false, features = ["ws", "tokio", "http1"] }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
# Reading ELF / Mach-O / WASM symbol tables for subsecond JumpTable
# construction. Same crate `dx serve` and `subsecond` itself use,
# which keeps semantics identical and avoids ABI mismatch hazards.
object = { version = "0.36", default-features = false, features = [
    "read",
    "std",
    # Needed by `whisker-dev-server::hotpatch::stub_object` to emit
    # the runtime-address jump-stub `.o` linked into every hot patch
    # (Option B / Dioxus-style symbol resolution).
    "write",
] }
