[workspace]
resolver = "2"
members = [
    "crates/whisker",
    "crates/whisker-animation",
    "crates/whisker-config",
    "crates/whisker-build",
    "crates/whisker-cli",
    "crates/whisker-cng",
    "crates/whisker-dev-runtime",
    "crates/whisker-dev-server",
    "crates/whisker-driver",
    "crates/whisker-driver-sys",
    "crates/whisker-macros",
    "crates/whisker-macro-syntax",
    "crates/whisker-fmt",
    "packages/whisker-asset",
    "packages/whisker-asset-macros",
    "crates/whisker-css",
    "crates/whisker-plugin",
    "crates/whisker-runtime",
    "crates/whisker-subsecond",
    "examples/anim-smoke",
    "examples/asset-demo",
    "examples/aurora-wallet",
    "examples/podcast",
    "examples/tokio-smoke",
    "examples/bluesky",
    "examples/bluesky/crates/bsky-domain",
    "examples/bluesky/crates/bsky-auth",
    "examples/bluesky/crates/bsky-theme",
    "examples/bluesky/crates/bsky-ui-kit",
    "packages/whisker-icons",
    "packages/whisker-icons/example",
    "packages/whisker-image",
    "packages/whisker-input",
    "packages/whisker-input/example",
    "packages/whisker-local-store",
    "packages/whisker-router",
    "packages/whisker-router/example",
    "packages/whisker-router-macros",
    "packages/whisker-safe-area",
    "packages/whisker-secure-store",
    "packages/whisker-secure-store/example",
    "packages/whisker-svg",
    "packages/whisker-svg/example",
    "packages/whisker-video",
    "packages/whisker-audio",
    "packages/whisker-audio/example",
    "packages/whisker-webview",
    "packages/whisker-webview/example",
]
exclude = [
    # Throwaway cdylib the dev-server's `thin_rebuild` integration
    # test compiles standalone. Must NOT be a workspace member or
    # cargo would try to build it as part of the regular workspace
    # build (and we'd lose the "fresh-from-scratch crate" property
    # the test relies on).
    "crates/whisker-dev-server/tests/fixtures/thin-build-fixture",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/whiskerrs/whisker"
homepage = "https://whisker.rs"
authors = ["itome <dev@itome.team>"]
# Shared crates.io discovery metadata. The whole workspace is one
# framework, so a single keyword/category set applies; individual
# publishable crates opt in via `keywords.workspace = true` /
# `categories.workspace = true`. `gui` is the closest crates.io
# category for a UI framework.
keywords = ["mobile", "ui", "ios", "android", "reactive"]
categories = ["gui"]

[workspace.dependencies]
whisker = { path = "crates/whisker", version = "0.7.0" }
whisker-animation = { path = "crates/whisker-animation", version = "0.7.0" }
whisker-config = { path = "crates/whisker-config", version = "0.7.0" }
whisker-build = { path = "crates/whisker-build", version = "0.7.0" }
whisker-cng = { path = "crates/whisker-cng", version = "0.7.0" }
whisker-dev-runtime = { path = "crates/whisker-dev-runtime", version = "0.7.0" }
whisker-dev-server = { path = "crates/whisker-dev-server", version = "0.7.0" }
whisker-driver = { path = "crates/whisker-driver", version = "0.7.0" }
whisker-driver-sys = { path = "crates/whisker-driver-sys", version = "0.7.0" }
whisker-macros = { path = "crates/whisker-macros", version = "0.7.0" }
whisker-macro-syntax = { path = "crates/whisker-macro-syntax", version = "0.7.0" }
whisker-fmt = { path = "crates/whisker-fmt", version = "0.7.0" }
whisker-asset = { path = "packages/whisker-asset", version = "0.7.0" }
whisker-asset-macros = { path = "packages/whisker-asset-macros", version = "0.7.0" }
whisker-css = { path = "crates/whisker-css", version = "0.7.0" }
whisker-plugin = { path = "crates/whisker-plugin", version = "0.7.0" }
whisker-runtime = { path = "crates/whisker-runtime", version = "0.7.0" }
whisker-router = { path = "packages/whisker-router", version = "0.7.0" }
whisker-router-macros = { path = "packages/whisker-router-macros", version = "0.7.0" }

anyhow = "1"
thiserror = "2"

# Whisker-owned fork of DioxusLabs/dioxus's `subsecond` 0.7.9. The
# crate is `whisker-subsecond` but exposes itself as `subsecond` via
# `[lib] name = "subsecond"`, so consumers keep `use subsecond::*`.
# The fork anchors the ASLR-slide lookup on `whisker_aslr_anchor`
# (emitted by `#[whisker::main]`) rather than `main` — the upstream
# `dlsym(RTLD_DEFAULT, "main")` is unsafe in Whisker's dylib-based
# Android runtime, where multiple `main` symbols can coexist in the
# same linker namespace.
subsecond = { path = "crates/whisker-subsecond", version = "0.7.11", package = "whisker-subsecond" }
subsecond-types = "0.7"

# Dev-time WebSocket receiver — pulled in only via the `hot-reload`
# feature, never present in release builds. Async stack kept minimal:
# current-thread tokio + tungstenite over std TcpStream.
#
# `libc` is the POSIX syscall surface for `whisker-dev-runtime`'s
# `log_capture` module (`dup2` over stdout/stderr → reader thread →
# WS log frame). Every device target we support is POSIX (Android
# NDK, iOS, macOS host, Linux host), so one workspace pin covers
# the whole matrix.
libc = "0.2"
tokio = { version = "1", default-features = false }
tokio-tungstenite = { version = "0.21", default-features = false }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Embed the patch dylib bytes in the JSON envelope (text frame).
base64 = "0.22"

# Inline TUI for `whisker run`. ratatui's Inline viewport anchors a
# small region at the bottom of the terminal while scrollback flows
# normally above — existing line-based output (sections, steps,
# device logs) stays grep'able. `crossterm` is ratatui's default
# backend. `scrolling-regions` enables the DECSTBM-based fast path
# for `Terminal::insert_before`, the API the `whisker run` TUI uses
# to commit captured cargo/gradle stderr into the terminal's normal
# scrollback while the live region redraws at the bottom.
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "scrolling-regions"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }

# Host-side dev server (whisker-dev-server). Heavy deps confined here.
axum = { version = "0.8", default-features = false, features = ["ws", "tokio", "http1"] }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
# Reading ELF / Mach-O / WASM symbol tables for subsecond JumpTable
# construction. Same crate `dx serve` and `subsecond` itself use,
# which keeps semantics identical and avoids ABI mismatch hazards.
object = { version = "0.36", default-features = false, features = [
    "read",
    "std",
    # Needed by `whisker-dev-server::hotpatch::stub_object` to emit
    # the runtime-address jump-stub `.o` linked into every hot patch
    # (Option B / Dioxus-style symbol resolution).
    "write",
] }
