[package]
name = "flint-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Flint CLI: `flint` and `cargo-flint` (hybrid)."

[[bin]]
name = "flint"
path = "src/bin/flint.rs"

[[bin]]
name = "cargo-flint"
path = "src/bin/cargo_flint.rs"

[dependencies]
anyhow = { workspace = true }
flint-codegen = { workspace = true }
flint-app-config = { workspace = true }
flint-plugin = { workspace = true }
