[package]
name = "flint-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core runtime for Flint: reactive primitives, element tree, Lynx integration."

[dependencies]
flint-ffi-lynx = { workspace = true }
thiserror = { workspace = true }
