[package]
name = "flint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-platform mobile UI framework built on Lynx. Umbrella crate."

[dependencies]
flint-runtime = { workspace = true }
flint-macros = { workspace = true }
flint-app-config = { workspace = true }
