[package]
name = "lyra-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lyra CLI: `lyra` and `cargo-lyra` (hybrid)."

[[bin]]
name = "lyra"
path = "src/bin/lyra.rs"

[[bin]]
name = "cargo-lyra"
path = "src/bin/cargo_lyra.rs"

[dependencies]
anyhow = { workspace = true }
lyra-codegen = { workspace = true }
lyra-app-config = { workspace = true }
lyra-plugin = { workspace = true }
