[package]
name = "lyra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-platform mobile UI framework built on Lynx. Umbrella crate."

[dependencies]
lyra-runtime = { workspace = true }
lyra-macros = { workspace = true }
lyra-mobile = { workspace = true }
lyra-app-config = { workspace = true }
