[package]
name = "tuft-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CNG codegen: generates iOS Xcode + Android Gradle projects from app config + plugins."

[dependencies]
anyhow = { workspace = true }
tuft-app-config = { workspace = true }
tuft-plugin = { workspace = true }
