[package]
name = "tuft-dev-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Host-side dev server for `tuft run`. File watch + cargo build + WebSocket push of subsecond patches. Pulled in by tuft-cli; no presence in release builds."

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
futures-util = { workspace = true, default-features = true }
serde = { workspace = true }
serde_json = { workspace = true }
subsecond-types = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
# A minimal client to drive the WebSocket server in tests. The
# production receiver in tuft-dev-runtime uses the same crate.
tokio-tungstenite = { workspace = true, features = ["connect"] }
