[package]
name = "tuft-driver-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Raw FFI declarations for the Tuft driver's C++ bridge. Internal — use `tuft-driver` for the safe wrappers."
