[package]
name = "tuft-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend driver for Tuft. Wraps the engine FFI and exposes the host shim helpers (run/tick) the iOS/Android shells call into via #[tuft::main]."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tuft-runtime = { workspace = true }
tuft-driver-sys = { workspace = true }
