[package]
name = "tuft-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend driver for Tuft. Wraps the engine FFI and exposes the host shim helpers (run/tick) the iOS/Android shells call into via #[tuft::main]."

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
# Routes the user app function through `subsecond::call`, enabling
# `tuft run` to ship hot-patches at runtime. Off by default so release
# builds carry zero hot-reload baggage — the subsecond crate (and its
# libloading / memmap2 / memfd transitive deps) drop out of the
# resolved graph entirely.
hot-reload = ["dep:subsecond"]

[dependencies]
tuft-runtime = { workspace = true }
tuft-driver-sys = { workspace = true }
subsecond = { workspace = true, optional = true }
