[package]
name = "tuft-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend driver for Tuft. Wraps the engine FFI and exposes the host shim helpers (run/tick) the iOS/Android shells call into via #[tuft::main]."

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
# Routes the user app function through `subsecond::call` and pulls in
# `tuft-dev-runtime`'s WebSocket patch receiver. Off by default so
# release builds carry zero hot-reload baggage — subsecond and its
# libloading / memmap2 / memfd transitive deps, plus tokio /
# tungstenite from `tuft-dev-runtime`, all drop out of the resolved
# graph entirely.
hot-reload = [
    "dep:subsecond",
    "dep:tuft-dev-runtime",
    "tuft-dev-runtime/hot-reload",
]

[dependencies]
tuft-runtime = { workspace = true }
tuft-driver-sys = { workspace = true }
subsecond = { workspace = true, optional = true }
tuft-dev-runtime = { workspace = true, optional = true }
