[package]
name = "tuft-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core runtime for Tuft: reactive primitives, element tree, Lynx integration."

[dependencies]
tuft-ffi-lynx = { workspace = true }
thiserror = { workspace = true }
