[package]
name = "whisker-asset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bundle and reference app assets in Whisker: compile-time-validated asset!/asset_str!/asset_bytes! macros + a runtime path resolver"

# Explicit `include` so a `cargo publish` ships the plugin entry point
# alongside the runtime + macros.
include = [
    "Cargo.toml",
    "src/lib.rs",
    "src/plugin.rs",
    "bin/**/*.rs",
    "README.md",
]

[lib]
crate-type = ["rlib"]

# Plugin registration — Whisker walks the consuming app's dep tree,
# picks this entry up, builds the `whisker-asset-plugin` binary below,
# and runs it as part of every `whisker build` / `whisker run` gen-tree
# sync. The user opts into actual bundling by calling
# `app.plugin::<WhiskerAsset>(|c| …)` in their `whisker.rs`; with no
# opt-in the plugin runs with `Config::default()` and contributes
# nothing.
[package.metadata.whisker.plugins.whisker-asset]
bin = "whisker-asset-plugin"

# Subprocess binary entry point Whisker spawns. Reads a `PluginRequest`
# JSON from stdin, mutates the IR via `WhiskerAsset::apply`, writes a
# `PluginResponse` JSON to stdout.
[[bin]]
name = "whisker-asset-plugin"
path = "bin/whisker_asset_plugin.rs"
test = false
bench = false
doc = false

[dependencies]
whisker-asset-macros = { workspace = true }

# Plugin support. Light deps (trait + IR types + JSON envelope +
# subprocess runner) so the config-probe build path stays cheap.
whisker-plugin = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# End-to-end test drives the plugin through the real CNG engine +
# renderers (`tests/plugin_e2e.rs`). No cycle: whisker-cng depends on
# whisker-plugin / whisker-config, never on whisker-asset.
whisker-cng = { workspace = true }
whisker-config = { workspace = true }
